# SQL_INJ-RUST

./: Cargo.toml  DEPENDANCIES  README.md  SQLi.rs  command.txt  database.db  diesel.toml  infos_result.txt  results.txt
migrations/2025-03-18-191917_create_users/: up.sql
migrations/2025-04-15-165041_create_statuses/: up.sql
migrations/2025-05-20-110521_create_infos/: down.sql  up.sql
src/: main.rs  schema.rs  schema_backup.rs
