[package]
name = "SQL_INJ-RUST"
version = "0.1.0"
edition = "2021"
default-run = "SQL_INJ-RUST"


[dependencies]
actix-session = "0.10.1"  # or the latest version
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.1", features = ["sqlite", "r2d2"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json", "multipart", "blocking", "rustls-tls"], default-features = false }

[dev-dependencies]
actix-web = { version = "4", features = ["macros"] }
diesel = { version = "2.1", features = ["sqlite", "r2d2"] } # Utilisez la même version que dans [dependencies]


[profile.dev]
lto = false